<resources>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_save">Save</string>
    <string name="urlbar_hint">Search or enter address</string>
    <string name="teaser">Automatic private browsing.\nBrowse. Erase. Repeat.</string>
    <string name="feedback_erase">Your browsing history has been erased.</string>
    <string name="feedback_erase2">Browsing history cleared</string>
    <string name="feedback_erase_custom_tab">Tab’s browsing history has been erased.</string>
    <string name="search_hint">Search for %1$s</string>
    <string name="menu_share">Share…</string>
    <string name="menu_report_site_issue">Report Site Issue</string>
    <string name="menu_open_with_default_browser2">Open in %1$s</string>
    <string name="menu_open_with_a_browser2">Open in…</string>
    <string name="menu_add_to_home_screen">Add to Home screen</string>
    <string name="menu_add_to_shortcuts">Add to Shortcuts</string>
    <string name="menu_remove_from_shortcuts">Remove from Shortcuts</string>
    <string name="menu_whats_new">What’s New</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_rights">Your Rights</string>
    <string name="menu_new_mode">Edit mode</string>
    <string name="menu_trackers_blocked_title">Trackers blocked</string>
    <string name="menu_trackers_blocked_subtitle">Turning this off may fix some site problems</string>
    <string name="menu_content_blocking">Content Blocking</string>
    <string name="menu_content_blocking_subtitle">Turn off to fix some sites</string>
    <string name="menu_custom_tab_branding">Powered by %1$s</string>
    <string name="share_dialog_title">Share via</string>
    <string name="notification_erase_text">Erase browsing history</string>
    <string name="notification_action_open">Open</string>
    <string name="notification_action_erase_and_open">Erase and Open</string>
    <string name="shortcut_erase_short_label">Erase</string>
    <string name="shortcut_erase_long_label">Erase browsing history</string>
    <string name="shortcut_erase_and_open_short_label">Erase &amp; open</string>
    <string name="shortcut_erase_and_open_long_label">Erase and open %1$s</string>
    <string name="text_selection_search_action">Search Privately</string>
    <string name="about_content"><![CDATA[<p>%1$s puts you in control.</p>
<p>Use it as a private browser:
  <ul>
    <li>Search and browse right in the app</li>
    <li>Block trackers (or update settings to allow trackers)</li>
    <li>Erase to delete cookies as well as search and browsing history</li>
  </ul>
</p>
<p>%1$s is produced by Mozilla. Our mission is to foster a healthy, open Internet.<br/>
<a href="%2$s">Learn more</a></p>]]></string>
    <string name="preference_privacy_and_security_header">Privacy &amp; Security</string>
    <string name="preference_privacy_and_security_summary">Tracking, cookies, data choices</string>
    <string name="preference_search_summary">Set default, autocomplete</string>
    <string name="preference_mozilla_summary">About %1$s, help</string>
    <string name="preference_category_tracking_protection3">Enhanced Tracking Protection</string>
    <string name="preference_category_web_content">Web Content</string>
    <string name="preference_category_switching_apps">Switching Apps</string>
    <string name="preference_category_general">General</string>
    <string name="preference_general_summary">Default browser, tabs, language</string>
    <string name="preference_category_data_collection_use">Data Collection &amp; Use</string>
    <string name="preference_category_search">Search</string>
    <string name="preference_show_search_suggestions">Get search suggestions</string>
    <string name="preference_show_search_suggestions_summary">%1$s will send what you type in the address bar to your search engine</string>
    <string name="preference_search_engine_default">Default</string>
    <string name="preference_search_engine_label">Search engine</string>
    <string name="preference_state_on">On</string>
    <string name="preference_state_off">Off</string>
    <string name="preference_subitem_autocomplete">URL Autocomplete</string>
    <string name="preference_switch_autocomplete_topsites">For Top sites</string>
    <string name="preference_autocomplete_topsite_summary">Enable to autocomplete more than 450 popular URLs in the address bar.</string>
    <string name="preference_switch_autocomplete_user_list">For Sites You Add</string>
    <string name="preference_autocomplete_user_list_summary">Enable to autocomplete more than 450 popular URLs in the address bar.</string>
    <string name="preference_category_autocomplete_manage_sites">Manage sites</string>
    <string name="preference_autocomplete_subitem_manage_sites">Manage sites</string>
    <string name="preference_autocomplete_action_add">+ Add custom URL</string>
    <string name="preference_autocomplete_explanation_text">Your autocomplete list:</string>
    <string name="preference_autocomplete_action_add2">Add URL</string>
    <string name="preference_autocomplete_title_add">Add custom URL</string>
    <string name="custom_autocomplete_quick_add">Add custom URL</string>
    <string name="add_custom_autocomplete_label">Add link to autocomplete</string>
    <string name="preference_category_cookies">Cookies and Site Data</string>
    <string name="preference_category_data_choices">Data Choices</string>
    <string name="preference_autocomplete_title_remove">Remove custom URLs</string>
    <string name="preference_autocomplete_learn_more">Learn more</string>
    <string name="preference_autocomplete_custom_summary">Add and manage custom autocomplete URLs.</string>
    <string name="preference_autocomplete_add_title">URL to add</string>
    <string name="preference_autocomplete_add_hint">Paste or enter URL</string>
    <string name="preference_autocomplete_add_example2">Example: mozilla.org</string>
    <string name="preference_autocomplete_add_example">Example: example.com</string>
    <string name="preference_autocomplete_add_confirmation">New custom URL added.</string>
    <string name="preference_autocomplete_menu_remove">Remove</string>
    <string name="preference_autocomplete_action_remove_content_description">Remove</string>
    <string name="preference_autocomplete_add_error">Double-check the URL you entered.</string>
    <string name="preference_language">Language</string>
    <string name="preference_language_systemdefault">System default</string>
    <string name="preference_category_privacy">Privacy</string>
    <string name="preference_privacy_block_ads">Block ad trackers</string>
    <string name="preference_privacy_block_ads_summary">Some ads track site visits, even if you don’t click the ads</string>
    <string name="preference_privacy_block_analytics">Block analytic trackers</string>
    <string name="preference_privacy_block_analytics_summary">Used to collect, analyze and measure activities like tapping and scrolling</string>
    <string name="preference_privacy_block_social">Block social trackers</string>
    <string name="preference_privacy_block_social_summary">Embedded on sites to track your visits and to display functionality like share buttons</string>
    <string name="preference_privacy_block_content">Block other content trackers</string>
    <string name="preference_privacy_block_content_summary2">Enabling may cause some pages to behave unexpectedly</string>
    <string name="preference_privacy_category_cookies">Block cookies</string>
    <string name="preference_privacy_should_block_cookies_no_option2">No thanks</string>
    <string name="preference_privacy_should_block_cookies_third_party_tracker_cookies_option">Block 3rd-party tracker cookies only</string>
    <string name="preference_privacy_should_block_cookies_third_party_only_option">Block 3rd-party cookies only</string>
    <string name="preference_privacy_should_block_cookies_yes_option2">Yes please</string>
    <string name="preference_security_biometric">Use fingerprint to unlock app</string>
    <string name="preference_security_biometric_summary">Your fingerprint can unlock %1$s if a URL is already opened in the app.
    Stealth will be turned on.</string>
    <string name="preference_privacy_secure_mode">Stealth</string>
    <string name="preference_privacy_stealth_summary">Hide webpages when switching apps and block taking screenshots.</string>
    <string name="preference_category_security">Security</string>
    <string name="preference_category_performance">Performance</string>
    <string name="preference_performance_block_webfonts">Block web fonts</string>
    <string name="preference_performance_block_webfonts_summary">May result in missing icons or images</string>
    <string name="preference_performance_block_javascript">Block JavaScript</string>
    <string name="preference_performance_block_javascript_summary">Pages may load faster, but may also behave unexpectedly</string>
    <string name="preference_default_browser2">Make %1$s default browser</string>
    <string name="preference_category_mozilla">Mozilla</string>
    <string name="preference_mozilla_telemetry2">Send usage data</string>
    <string name="preference_mozilla_telemetry_summary">Learn more</string>
    <string name="preference_mozilla_telemetry_summary2">Mozilla strives to collect only what we need to provide and improve %1$s for everyone.</string>
    <string name="preference_privacy_notice">Privacy Notice</string>
    <string name="preference_about">About %1$s</string>
    <string name="preference_search_installed_search_engines">Installed search engines</string>
    <string name="preference_choose_search_engine">Choose search engine</string>
    <string name="preference_search_restore">Restore default search engines</string>
    <string name="preference_search_add2">+ Add another search engine</string>
    <string name="preference_search_remove_title">Remove search engines</string>
    <string name="preference_search_remove">Remove</string>
    <string name="preference_search_add3">Add another search engine</string>
    <string name="preference_select_preferred_engine">Select your preferred engine:</string>
    <string name="preference_homescreen_tips">Show home screen tips</string>
    <string name="action_option_add_search_engine">Add search engine</string>
    <string name="search_add_manually_name_hint">Search engine name</string>
    <string name="saved_url">URL Save</string>
    <string name="hint_url">Enter the url</string>
    <string name="setting_asr_server_header">ASR server</string>
    <string name="setting_asr_server">ASR server setting</string>
    <string name="setting_asr_auth_url_title">Authentication EndPoint URL</string>
    <string name="setting_subtitle_header">Subtitle</string>
    <string name="setting_subtitle">Subtitle settings</string>
    <string name="setting_app_info_header">App information</string>
    <string name="setting_app_version_prefix">App version:</string>
    <string name="txt_select_birth" translatable="false">Choose your date of birth</string>
    <string name="txt_comma_year" translatable="false">Year, </string>
    <string name="txt_comma_month" translatable="false">Month, </string>
    <string name="txt_comma_day" translatable="false">Day</string>
    <string name="txt_birth" translatable="false">the date of one’s birth</string>
    <string name="txt_phone" translatable="false">Phone</string>
    <string name="txt_add_auth" translatable="false">Authentication information</string>
    <string name="txt_phone_explain" translatable="false">Please enter your phone number (without (-)).</string>
    <string name="txt_privacy_policy" translatable="false">Agree to collect personal information</string>
    <string name="txt_detail" translatable="false">Detail...</string>
</resources>