<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="18dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_rectangle_r10"
        android:backgroundTint="@color/white"
        android:clipToPadding="false"
        android:elevation="8dp"
        android:maxWidth="400dp"
        android:paddingHorizontal="20dp"
        android:paddingTop="40dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/seoul_namsan_eb"
            android:text="@string/txt_add_auth"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_contents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_square_ac_r"
                android:padding="10dp"
                android:text="@string/txt_birth"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="@color/white"
                android:elevation="16dp"
                android:padding="10dp"
                android:text="@string/txt_select_birth"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:rippleColor="@color/white"
                app:strokeColor="@color/white" />

            <LinearLayout
                android:id="@+id/layout_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edit_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_comma_year"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edit_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_comma_month"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edit_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_comma_day"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/nanum_square_ac_r"
                android:padding="10dp"
                android:text="@string/txt_phone"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:digits="0123456789"
                android:fontFamily="@font/nanum_square_ac_r"
                android:hint="@string/txt_phone_explain"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="14"
                android:minWidth="300dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/chk_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="@font/nanum_square_ac_r"
                    android:text="@string/txt_privacy_policy"
                    android:textColor="@color/black"


                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <Button
                    android:id="@+id/btn_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@color/transparent"
                    android:fontFamily="@font/nanum_square_ac_r"
                    android:text="@string/txt_detail"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_contents">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:elevation="16dp"
                android:fontFamily="@font/seoul_namsan_eb"
                android:padding="10dp"
                android:text="@string/action_cancel"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:rippleColor="@color/black"
                app:strokeColor="@color/black" />

            <View
                android:id="@+id/empty_divider"
                android:layout_width="10dp"
                android:layout_height="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:elevation="16dp"
                android:fontFamily="@font/seoul_namsan_eb"
                android:padding="10dp"
                android:text="@string/action_ok"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:rippleColor="@color/black"
                app:strokeColor="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>